[package]
name = "vintage_vinyl_player"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document"] }
gloo-storage = "0.3"
gloo-console = "0.3"
reqwasm = "0.5.0"

